added attribute for hero image

--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
           <img src="img/placeholder.png" alt="Featured Image 1" class="featured-img img-responsive" />
           <h3 class="featured-header">ALPHA</h3>
           <p class="featured-description">
-            <a href="" class="featured-link">https://www.alpha.com</a>
+            <a href="https://mave.me/img/projects/full_placeholder.png" class="featured-link">https://www.alpha.com</a>
           </p>
         </div>
         <div class="featured-item">
           <img src="img/placeholder.png" alt="Featured Image 2" class="featured-img img-responsive" />
           <h3 class="featured-header">BETA</h3>
           <p class="featured-description">
-            <a href="" class="featured-link">https://www.beta.com</a>
+            <a href="https://mave.me/img/projects/full_placeholder.png" class="featured-link">https://www.beta.com</a>
           </p>
         </div>
         <div class="featured-item">
           <img src="img/placeholder.png" alt="Featured Image 3" class="featured-img img-responsive" />
           <h3 class="featured-header">GAMMA</h3>
           <p class="featured-description">
-            <a href="" class="featured-link">https://www.gamma.com</a>
+            <a href="https://mave.me/img/projects/full_placeholder.png" class="featured-link">https://www.gamma.com</a>
           </p>
         </div>
       </div>
